Map Gates to Values

--- a/Notebooks/Qiskit_Qasm.ipynb
+++ b/Notebooks/Qiskit_Qasm.ipynb
@@ -31,6 +31,7 @@
    "source": [
     "import numpy as np\n",
     "import math\n",
+    "import cmath\n",
     "from qiskit import IBMQ, Aer\n",
     "from qiskit.providers.ibmq import least_busy\n",
     "from qiskit import QuantumCircuit, assemble, transpile\n",
@@ -118,26 +119,60 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">                                          ┌───┐   \n",
-       "q_0: ──────■──────────────────────■───────┤ H ├─X─\n",
-       "           │                ┌───┐ │P(π/2) └───┘ │ \n",
-       "q_1: ──────┼────────■───────┤ H ├─■─────────────┼─\n",
-       "     ┌───┐ │P(π/4)  │P(π/2) └───┘               │ \n",
-       "q_2: ┤ H ├─■────────■───────────────────────────X─\n",
-       "     └───┘                                        \n",
-       "c: 3/═════════════════════════════════════════════\n",
-       "                                                  </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">                                                                               »\n",
+       "q_0: ──────■─────────────────────────────────────────■─────────────────────────»\n",
+       "           │                                         │                         »\n",
+       "q_1: ──────┼─────────■───────────────────────────────┼────────■────────────────»\n",
+       "           │         │                               │        │                »\n",
+       "q_2: ──────┼─────────┼────────■──────────────────────┼────────┼────────■───────»\n",
+       "           │         │        │                ┌───┐ │P(π/8)  │P(π/4)  │P(π/2) »\n",
+       "q_3: ──────┼─────────┼────────┼────────■───────┤ H ├─■────────■────────■───────»\n",
+       "     ┌───┐ │P(π/16)  │P(π/8)  │P(π/4)  │P(π/2) └───┘                           »\n",
+       "q_4: ┤ H ├─■─────────■────────■────────■───────────────────────────────────────»\n",
+       "     └───┘                                                                     »\n",
+       "c: 5/══════════════════════════════════════════════════════════════════════════»\n",
+       "                                                                               »\n",
+       "«                                          ┌───┐   \n",
+       "«q_0: ──────■──────────────────────■───────┤ H ├─X─\n",
+       "«           │                ┌───┐ │P(π/2) └───┘ │ \n",
+       "«q_1: ──────┼────────■───────┤ H ├─■─────────X───┼─\n",
+       "«     ┌───┐ │P(π/4)  │P(π/2) └───┘           │   │ \n",
+       "«q_2: ┤ H ├─■────────■───────────────────────┼───┼─\n",
+       "«     └───┘                                  │   │ \n",
+       "«q_3: ───────────────────────────────────────X───┼─\n",
+       "«                                                │ \n",
+       "«q_4: ───────────────────────────────────────────X─\n",
+       "«                                                  \n",
+       "«c: 5/═════════════════════════════════════════════\n",
+       "«                                                  </pre>"
       ],
       "text/plain": [
-       "                                          ┌───┐   \n",
-       "q_0: ──────■──────────────────────■───────┤ H ├─X─\n",
-       "           │                ┌───┐ │P(π/2) └───┘ │ \n",
-       "q_1: ──────┼────────■───────┤ H ├─■─────────────┼─\n",
-       "     ┌───┐ │P(π/4)  │P(π/2) └───┘               │ \n",
-       "q_2: ┤ H ├─■────────■───────────────────────────X─\n",
-       "     └───┘                                        \n",
-       "c: 3/═════════════════════════════════════════════\n",
-       "                                                  "
+       "                                                                               »\n",
+       "q_0: ──────■─────────────────────────────────────────■─────────────────────────»\n",
+       "           │                                         │                         »\n",
+       "q_1: ──────┼─────────■───────────────────────────────┼────────■────────────────»\n",
+       "           │         │                               │        │                »\n",
+       "q_2: ──────┼─────────┼────────■──────────────────────┼────────┼────────■───────»\n",
+       "           │         │        │                ┌───┐ │P(π/8)  │P(π/4)  │P(π/2) »\n",
+       "q_3: ──────┼─────────┼────────┼────────■───────┤ H ├─■────────■────────■───────»\n",
+       "     ┌───┐ │P(π/16)  │P(π/8)  │P(π/4)  │P(π/2) └───┘                           »\n",
+       "q_4: ┤ H ├─■─────────■────────■────────■───────────────────────────────────────»\n",
+       "     └───┘                                                                     »\n",
+       "c: 5/══════════════════════════════════════════════════════════════════════════»\n",
+       "                                                                               »\n",
+       "«                                          ┌───┐   \n",
+       "«q_0: ──────■──────────────────────■───────┤ H ├─X─\n",
+       "«           │                ┌───┐ │P(π/2) └───┘ │ \n",
+       "«q_1: ──────┼────────■───────┤ H ├─■─────────X───┼─\n",
+       "«     ┌───┐ │P(π/4)  │P(π/2) └───┘           │   │ \n",
+       "«q_2: ┤ H ├─■────────■───────────────────────┼───┼─\n",
+       "«     └───┘                                  │   │ \n",
+       "«q_3: ───────────────────────────────────────X───┼─\n",
+       "«                                                │ \n",
+       "«q_4: ───────────────────────────────────────────X─\n",
+       "«                                                  \n",
+       "«c: 5/═════════════════════════════════════════════\n",
+       "«                                                  "
       ]
      },
      "execution_count": 4,
@@ -146,7 +181,7 @@
     }
    ],
    "source": [
-    "n = 3\n",
+    "n = 5\n",
     "\n",
     "qc3 = QuantumCircuit(n,n)\n",
     "qftCircuit(qc3,n)\n",
@@ -162,7 +197,7 @@
     {
      "data": {
       "text/plain": [
-       "'OPENQASM 2.0;\\ninclude \"qelib1.inc\";\\nqreg q[3];\\ncreg c[3];\\nh q[2];\\ncp(pi/4) q[0],q[2];\\ncp(pi/2) q[1],q[2];\\nh q[1];\\ncp(pi/2) q[0],q[1];\\nh q[0];\\nswap q[0],q[2];\\n'"
+       "'OPENQASM 2.0;\\ninclude \"qelib1.inc\";\\nqreg q[5];\\ncreg c[5];\\nh q[4];\\ncp(pi/16) q[0],q[4];\\ncp(pi/8) q[1],q[4];\\ncp(pi/4) q[2],q[4];\\ncp(pi/2) q[3],q[4];\\nh q[3];\\ncp(pi/8) q[0],q[3];\\ncp(pi/4) q[1],q[3];\\ncp(pi/2) q[2],q[3];\\nh q[2];\\ncp(pi/4) q[0],q[2];\\ncp(pi/2) q[1],q[2];\\nh q[1];\\ncp(pi/2) q[0],q[1];\\nh q[0];\\nswap q[0],q[4];\\nswap q[1],q[3];\\n'"
       ]
      },
      "execution_count": 5,
@@ -176,11 +211,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "120b6852",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gateToCAT(gate):\n",
+    "    validGates = {'h', 'x', 'cx', 'id', 'y', 'z', 'swap'}\n",
+    "    if(gate in validGates):\n",
+    "        if(gate == 'h'):\n",
+    "            arr = np.array([1/np.sqrt(2),1/np.sqrt(2),1/np.sqrt(2),-1/np.sqrt(2)],dtype=complex)\n",
+    "            return [arr]\n",
+    "        elif(gate == 'x'):\n",
+    "            arr = np.array([0,1,1,0],dtype=complex)\n",
+    "            return [arr]\n",
+    "        elif(gate == 'cx'):\n",
+    "            arr = np.array([1,0,0,1],dtype=complex)\n",
+    "            arr2 = np.array([1,0,0,1,0,1,1,0],dtype=complex)\n",
+    "            return [arr, arr2]\n",
+    "        elif(gate == 'id'):\n",
+    "            arr = np.array([1,0,0,1],dtype=complex)\n",
+    "            return [arr]\n",
+    "        elif(gate == 'y'):\n",
+    "            arr = np.array([0,1j,-1j,0],dtype=complex)\n",
+    "            return [arr]\n",
+    "        elif(gate == 'z'):\n",
+    "            arr = np.array([1,0,0,-1],dtype=complex)\n",
+    "            return [arr]\n",
+    "        elif(gate == 'swap'):\n",
+    "            arr = np.array([1,0,1,0,0,1,0,1],dtype=complex)\n",
+    "            arr2 = np.array([1,0,1,0,0,1,0,1],dtype=complex)\n",
+    "            return [arr, arr2]\n",
+    "    elif(len(gate) > 4 and gate[0:3] == 'cp(' and gate[-1:] == ')'):\n",
+    "        if(len(gate) > 7 and gate[3:6] == 'pi/' and gate[6:-1].isnumeric()):\n",
+    "            theta = math.pi/int(gate[6:-1])\n",
+    "            omega = cmath.exp(1j*theta)\n",
+    "            arr = np.array([1,1,0,0,0,0,1,omega],dtype=complex)\n",
+    "            arr2 = np.array([1,0,1,0,0,1,0,omega],dtype=complex)\n",
+    "            return [arr, arr2]\n",
+    "    else:\n",
+    "        print(\"Invalid Gate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "45a2129c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        +0.j        , 1.        +0.j        ,\n",
+       "       0.        +0.j        , 0.        +0.j        ,\n",
+       "       0.        +0.j        , 0.        +0.j        ,\n",
+       "       1.        +0.j        , 0.98078528+0.19509032j])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gateToCAT('cp(pi/16)')[0]"
+   ]
   }
  ],
  "metadata": {
