changed to allow for new representation, adding new notebook for updated methods

--- a/Notebooks/Variable Elimination.ipynb
+++ b/Notebooks/Variable Elimination.ipynb
@@ -88,6 +88,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "a0e98d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, 'C:\\\\Users\\\\arpan\\\\Desktop\\\\Aresty_Quantum_Git\\\\pgmpy\\\\pgmpy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "845d0e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Sum or integral of conditional probabilites for node q0m0 is not equal to 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 17>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m     cpd_q0m1 \u001b[38;5;241m=\u001b[39m TabularCPD(variable\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq0m1\u001b[39m\u001b[38;5;124m'\u001b[39m, variable_card \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m, values \u001b[38;5;241m=\u001b[39m [[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m), \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m), \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m), \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m), \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m]], evidence \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq0m0\u001b[39m\u001b[38;5;124m'\u001b[39m], evidence_card \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m4\u001b[39m])\n\u001b[0;32m     16\u001b[0m     bellState\u001b[38;5;241m.\u001b[39madd_cpds(cpd_q0m0, cpd_q0m1)\n\u001b[1;32m---> 17\u001b[0m bellStateInfer \u001b[38;5;241m=\u001b[39m \u001b[43mVariableElimination\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbellState\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m q1 \u001b[38;5;241m=\u001b[39m bellStateInfer\u001b[38;5;241m.\u001b[39mquery([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq0m1\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(q1)\n",
+      "File \u001b[1;32m~\\Desktop\\Aresty_Quantum_Git\\pgmpy\\pgmpy\\pgmpy\\inference\\base.py:65\u001b[0m, in \u001b[0;36mInference.__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, model):\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m model\n\u001b[1;32m---> 65\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel, JunctionTree):\n\u001b[0;32m     68\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvariables \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(chain(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mnodes()))\n",
+      "File \u001b[1;32m~\\Desktop\\Aresty_Quantum_Git\\pgmpy\\pgmpy\\pgmpy\\models\\BayesianNetwork.py:423\u001b[0m, in \u001b[0;36mBayesianNetwork.check_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    421\u001b[0m \u001b[38;5;66;03m# Check if the values of the CPD sum to 1.\u001b[39;00m\n\u001b[0;32m    422\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m cpd\u001b[38;5;241m.\u001b[39mis_valid_cpd():\n\u001b[1;32m--> 423\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    424\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSum or integral of conditional probabilites for node \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not equal to 1.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    425\u001b[0m     )\n\u001b[0;32m    427\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(cpd\u001b[38;5;241m.\u001b[39mvariables) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mset\u001b[39m(cpd\u001b[38;5;241m.\u001b[39mstate_names\u001b[38;5;241m.\u001b[39mkeys())) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    428\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    429\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCPD for \u001b[39m\u001b[38;5;132;01m{node}\u001b[39;00m\u001b[38;5;124m doesn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt have state names defined for all the variables.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    430\u001b[0m     )\n",
+      "\u001b[1;31mValueError\u001b[0m: Sum or integral of conditional probabilites for node q0m0 is not equal to 1."
+     ]
+    }
+   ],
+   "source": [
+    "from pgmpy.models import BayesianNetwork\n",
+    "from pgmpy.factors.discrete.CPD import TabularCPD\n",
+    "import numpy as np\n",
+    "from pgmpy.inference import VariableElimination\n",
+    "from math import sqrt\n",
+    "\n",
+    "\n",
+    "\n",
+    "bellState = BayesianNetwork([('q0m0', 'q0m1')])\n",
+    "\n",
+    "if(inputString == \"00\"):\n",
+    "    cpd_q0m0 = TabularCPD(variable = 'q0m0', variable_card = 4, values = [[1/2], [0], [0], [1/2]])#, state_names={'q0m0': ['I', 'X', 'Y', 'Z']})\n",
+    "    \n",
+    "    cpd_q0m1 = TabularCPD(variable='q0m1', variable_card = 4, values = [[1, 0, 0, 0], [0, 1/sqrt(2), 1/sqrt(2), 0], [0, -1/sqrt(2), 1/sqrt(2), 0], [0, 0, 0, 0]], evidence = ['q0m0'], evidence_card = [4])\n",
+    "    \n",
+    "    bellState.add_cpds(cpd_q0m0, cpd_q0m1)\n",
+    "bellStateInfer = VariableElimination(bellState)\n",
+    "q1 = bellStateInfer.query(['q0m1'])\n",
+    "\n",
+    "print(q1)\n",
+    "\n",
+    "q1Vars = q1.variables\n",
+    "q1Values = q1.values\n",
+    "\n",
+    "print(q1Vars)\n",
+    "print(q1Values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "5436e7ae",
    "metadata": {},
@@ -716,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
